<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_video">

        <ListPreference
            android:key="pref_video_resolution"
            android:title="@string/pref_video_resolution_title"
            android:summary="@string/pref_video_resolution_summary"
            android:entries="@array/pref_video_resolution_entries"
            android:entryValues="@array/pref_video_resolution_values"
            android:defaultValue="auto" />

        <ListPreference
            android:key="pref_video_frame_rate"
            android:title="@string/pref_video_frame_rate_title"
            android:summary="@string/pref_video_frame_rate_summary"
            android:entries="@array/pref_video_frame_rate_entries"
            android:entryValues="@array/pref_video_frame_rate_values"
            android:defaultValue="auto" />

        <ListPreference
            android:key="pref_video_quality"
            android:title="@string/pref_video_quality_title"
            android:summary="@string/pref_video_quality_summary"
            android:entries="@array/pref_video_quality_entries"
            android:entryValues="@array/pref_video_quality_values"
            android:defaultValue="balanced" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_performance">

        <ListPreference
            android:key="pref_perf_preset"
            android:title="@string/pref_perf_preset_title"
            android:summary="@string/pref_perf_preset_summary"
            android:entries="@array/pref_perf_preset_entries"
            android:entryValues="@array/pref_perf_preset_values"
            android:defaultValue="balanced" />

        <SwitchPreferenceCompat
            android:key="pref_perf_low_latency"
            android:title="@string/pref_perf_low_latency_title"
            android:summary="@string/pref_perf_low_latency_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_display">

        <ListPreference
            android:key="pref_display_theme_mode"
            android:title="@string/pref_display_theme_mode_title"
            android:summary="@string/pref_display_theme_mode_summary"
            android:entries="@array/pref_display_theme_mode_entries"
            android:entryValues="@array/pref_display_theme_mode_values"
            android:defaultValue="system" />

        <SwitchPreferenceCompat
            android:key="pref_display_dynamic_color"
            android:title="@string/pref_display_dynamic_color_title"
            android:summary="@string/pref_display_dynamic_color_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_display_keep_screen_on"
            android:title="@string/pref_display_keep_screen_on_title"
            android:summary="@string/pref_display_keep_screen_on_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_display_allow_rotation"
            android:title="@string/pref_display_allow_rotation_title"
            android:summary="@string/pref_display_allow_rotation_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="pref_display_fullscreen"
            android:title="@string/pref_display_fullscreen_title"
            android:summary="@string/pref_display_fullscreen_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_network">

        <ListPreference
            android:key="pref_network_preferred_connection"
            android:title="@string/pref_network_preferred_connection_title"
            android:summary="@string/pref_network_preferred_connection_summary"
            android:entries="@array/pref_network_preferred_connection_entries"
            android:entryValues="@array/pref_network_preferred_connection_values"
            android:defaultValue="wifi" />

        <SwitchPreferenceCompat
            android:key="pref_network_auto_reconnect"
            android:title="@string/pref_network_auto_reconnect_title"
            android:summary="@string/pref_network_auto_reconnect_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_config">

        <Preference
            android:key="pref_config_export"
            android:title="@string/pref_config_export_title"
            android:summary="@string/pref_config_export_summary" />

        <Preference
            android:key="pref_config_import"
            android:title="@string/pref_config_import_title"
            android:summary="@string/pref_config_import_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_about">

        <Preference
            android:key="pref_about_version"
            android:title="@string/pref_about_version_title"
            android:summary="@string/pref_about_version_summary" />

        <Preference
            android:key="pref_about_licenses"
            android:title="@string/pref_about_licenses_title"
            android:summary="@string/pref_about_licenses_summary" />
    </PreferenceCategory>

</PreferenceScreen>
